class3_ws/log/build_2020-09-25_16-00-35/assignment3/stderr.log
  File "/home/ubuntu/EN613/class3_ws/install/assignment3/lib/python3.8/site-packages/assignment3/mecanum_sim.py", line 64
    msg_fr = Twist()
    ^
SyntaxError: invalid syntax

